AI Receptionist outreach - 45 businesses emailed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="max-w-4xl mx-auto text-center">
       <h1 class="text-4xl md:text-6xl font-bold mb-6">Never Miss Another Customer Call — Even After Hours</h1>
       <p class="text-xl text-slate-300 mb-8">Your 24/7 AI Receptionist That Answers Calls, Books Appointments, and Captures Leads Automatically.</p>
-      <a href="#demo" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-10 rounded-lg text-lg inline-block">Book a Free 10-Minute Demo</a>
+      <a href="demo.html" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-10 rounded-lg text-lg inline-block">Book a Free 10-Minute Demo</a>
       <p class="text-slate-400 mt-4 text-sm">No contracts. No commitment.</p>
     </div>
   </section>
