--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
     </section>
 
     <section id="contact" class="pricing">
+      <div class="plan popular">
+        <h3>🎁 FREE 7-Day Trial</h3>
+        <div class="price">$0</div>
+        <ul>
+          <li>Full AI Receptionist</li>
+          <li>7 days free</li>
+          <li>No credit card</li>
+          <li>See it in action</li>
+        </ul>
+        <a href="mailto:tigha66@gmail.com?subject=Free%207-Day%20Trial" class="btn">Start Free Trial</a>
+      </div>
       <div class="plan">
         <h3>Basic</h3>
         <div class="price">$149<span>/mo</span></div>
